--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,12 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: 'af-south-1'
+        
+        name: Invalidate CloudFront
+        uses: chetan/invalidate-cloudfront-action@v2
+env:
+    DISTRIBUTION: ${{ secrets.DISTRIBUTION }}
+    PATHS: '/*'
+    AWS_REGION: 'af-south-1'
+    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
